# col-ii

./: .gitignore  Makefile  README.md  index.html  jon@192.168.50.252  main.css  makefile  package.json  vite.config.js
protos/: transfer.proto
src/: main.js  util.js  webgpu.js  wgpu.js
src-wasm/: Cargo.toml
src-wasm/src/: lib.rs
src/wgpu/: learn-1.js  learn-2.js  render.js  wgsl.js
wasm-lib/: Cargo.toml  build.rs
wasm-lib/examples/: scraper_html.rs
wasm-lib/proto/: transfer.proto
wasm-lib/src/: enums.rs  err.rs  lib.rs
wasm-lib/src/canvas/: canvas.rs
wasm-lib/src/create_element/: element.rs
