[package]
name = "wasm-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.84"
js-sys = "0.3.60"
wasm-bindgen-futures = "0.4.39"
protobuf = "3.3.0"
serde-wasm-bindgen = "0.6.3"
serde = "1.0.193"



[dev-dependencies]
mockall = "0.12.1"
scraper = "0.18.1"

[dependencies.web-sys]
version = "0.3.6"
features = [
    "Window", 
    "console", 
    "Document", 
    "Element", 
    "HtmlElement",
    "Node",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Node",
    "HtmlCanvasElement",
    ]
